fix address and contact row spacing (#3843)
* use margin bottom 2 for first address and contact rows, wrap address hidden fields in span to lose input + label styling

* remove span, update selector to disregard hidden inputs

--- a/app/javascript/css/forms.scss
+++ b/app/javascript/css/forms.scss
@@ -78,8 +78,8 @@ input.full-width, select.full-width, .input.full-width {
   width: 100%;
 }
 
-input + label,
-input + fieldset,
+input:not([type="hidden"]) + label,
+input:not([type="hidden"]) + fieldset,
 select + label,
 select + fieldset,
 .input + label,
